[package]
name = "prometheus-absent-data-alert-rule-generator"
version = "0.1.0"
authors = ["Stile Developers <developers@stileeducation.com>"]
edition = "2018"

[workspace]
members = [
        "ast-explorer"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
prometheus-parser = { git = "https://github.com/StileEducation/prometheus-parser-rs", branch = "master" }
glob = "0.3.0"
anyhow = "1.0.44"
log = "0.4.13"
env_logger = "0.9.0"
pico-args = "0.4.2"
itertools = "0.10.1"
regex = "1.5.4"

[dev-dependencies]
pretty_assertions = "0.7.2"
xshell = "0.1.17"
tempfile = "3.2.0"
