[package]
name = "prometheus-absent-data-alert-rule-generator"
version = "0.1.0"
authors = ["Stile Developers <developers@stileeducation.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.32"
prometheus-parser = { git = "https://github.com/StileEducation/prometheus-parser-rs", branch = "master" }
glob = "0.3.1"
anyhow = "1.0.80"
log = "0.4.20"
env_logger = "0.11.2"
pico-args = "0.5.0"
itertools = "0.12.1"
regex = "1.10.3"

[dev-dependencies]
pretty_assertions = "1.4.0"
xshell = "0.2.5"
tempfile = "3.10.0"
